# sqlparser-ts

./: .gitignore  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-upstream.yml  ci.yml
benchmark/: README.md  cli.js  package-lock.json  package.json  queries.js  results.txt
benchmark/figures/: results.json
scripts/: build.sh  patch.sh  setup.sh  upgrade.sh
src/: dialects.ts  index.ts  lib.rs  parser.ts  wasm.ts
src/types/: comments.ts  index.ts
tests/: README.md  builds.test.ts  parser.test.ts  setup.ts  test-utils.ts
tests/dialects/: bigquery.test.ts  clickhouse.test.ts  common.test.ts  databricks.test.ts  duckdb.test.ts  mssql.test.ts  mysql.test.ts  oracle.test.ts  postgresql.test.ts  redshift.test.ts  snowflake.test.ts  spark.test.ts  sqlite.test.ts  teradata.test.ts
tests/statements/: dml.test.ts  select.test.ts
ts/: .eslintrc.js  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
ts/examples/: demo.js
ts/src/: dialects.ts  index.ts  parser.ts  wasm.ts
ts/src/types/: ast.ts  errors.ts  index.ts
ts/tests/: README.md  builds.test.ts  parser.test.ts  setup.ts  test-utils.ts
ts/tests/dialects/: bigquery.test.ts  clickhouse.test.ts  common.test.ts  databricks.test.ts  duckdb.test.ts  hive.test.ts  mssql.test.ts  mysql.test.ts  oracle.test.ts  postgresql.test.ts  redshift.test.ts  (+2 more)
(+4 files in other folders)
