[package]
name = "sqlparser-rs-wasm"
version = "0.60.0-rc3"
edition = "2021"
description = "WebAssembly bindings for sqlparser-rs SQL parser"
license = "Apache-2.0"
repository = "https://github.com/guan404ming/sqlparser-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlparser = { version = "0.60.0", features = ["serde"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
